--- a/pierwszy_skrypt.ipynb
+++ b/pierwszy_skrypt.ipynb
@@ -301,6 +301,362 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Celem tego bardzo prostego skryptu będzie wyliczenie bazy czasowej (długości obserwacji) z pliku z fotometrią gwiazdy <b>HD 7454</b>. Dane pochodzą z satelity TESS. Struktura pliku jest następująca:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# TBJD-2450000      FLUX           FLUX_ERR\n",
+      "  1354.1131991     -3.5355597      0.6838813\n",
+      "  1354.1145881     -3.0284873      0.6841874\n",
+      "  1354.1173659      0.7362481      0.6849412\n",
+      "  1354.1187548      1.0039511      0.6853946\n",
+      "  1354.1201437      2.0536179      0.6856015\n",
+      "  1354.1215327      2.9236379      0.6860147\n",
+      "  1354.1229216      3.1528239      0.6861270\n",
+      "  1354.1243105      1.7814821      0.6857486\n",
+      "  1354.1256994      2.6458713      0.6859725\n"
+     ]
+    }
+   ],
+   "source": [
+    "head TIC102090493-s2-121s_lc3_fppt.dat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pierwsza linia to nagłówek, następne to kolejno w 3 kolumnach: czas, strumień oraz błąd pomiaru strumienia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na początku chcemy wyświetlić tylko pierwszą linię zawierającą czas. Wyliczenie bazy czasowej będzie po prostu odjęciem wartości początkowej czasu od końcowej. Za pomocą komend <head> i <tail> wyświetlimy drugą (bo pomijamy nagłówek) linię. Otrzymaną wartość wpiszemy do zmiennej <b>start</b>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1354.1131991     -3.5355597      0.6838813\n"
+     ]
+    }
+   ],
+   "source": [
+    "head -n 2 TIC102090493-s2-121s_lc3_fppt.dat | tail -n 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wynik działania komendy również można przypisać do zmiennej. Robi się to następująco:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start=$(head -n 2 TIC102090493-s2-121s_lc3_fppt.dat | tail -n 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1354.1131991 -3.5355597 0.6838813\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo $start"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do uzyskania tylko wartości z czasem, użyjemy komendy <b>cut</b>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1354.1131991\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo $start | cut -d \" \" -f 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wynik działania tej komendy, również przechwycimy do zmiennej, może mieć tę samą nazwę. Nie można użyć pipe'a wcześniej podczas definiowania zmiennej <b>start</b> za pierwszym razem, gdyż sam tekst ma wiele spacji, które zostają okrojone podczas wpisywania do zmiennej. Komendą <b>cut</b> definuijemy jaki ma być separator, który oddziela kolejne kolumny i po wpisaniu do zmiennej jest on właśnie już pojedynczą spacją."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start=$(echo $start | cut -d \" \" -f 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1354.1131991\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo $start"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Teraz pozostaje tylko wpisać do zmiennej za pomocą analogicznych komend, ostatnią wartość czasu (ostatnia linia) i odjąć je od siebie za pomocą kalkulatora <b>bc</b>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end=$(tail -n 1 TIC102090493-s2-121s_lc3_fppt.dat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1381.5176043 -0.5467978 0.6999715\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo $end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "end=$(echo $end | cut -d \" \" -f 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1381.5176043\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo $end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tbase=$(echo $end-$start | bc)   #odejmowanie wartości końcowej od początkowej, do uzyskania bazy czasowej"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.4044052\n"
+     ]
+    }
+   ],
+   "source": [
+    "echo $tbase"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Baza czasowa została wyliczona. Teraz przyszedł czas na to, aby wszystkie komendy potrzebne do jej wyliczenia zebrać razem i wpisać do pliku, który będzie naszym skryptem. W tym przykładzie stworzę plik <b>baza.bash</b>, który będzie przechowywał następujące komendy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start=$(head -n 2 TIC102090493-s2-121s_lc3_fppt.dat | tail -n 1)\n",
+    "start=$(echo $start | cut -d \" \" -f 1)\n",
+    "end=$(tail -n 1 TIC102090493-s2-121s_lc3_fppt.dat)\n",
+    "end=$(echo $end | cut -d \" \" -f 1)\n",
+    "tbase=$(echo $end-$start | bc)\n",
+    "echo $tbase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "astro.dat      helio.dat              stars.dat\n",
+      "baza.bash      pierwszy_skrypt.ipynb  telescope_names.txt\n",
+      "file_list.txt  SO_komendy.ipynb       TIC102090493-s2-121s_lc3_fppt.dat\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls # w mojej lokalizacji znajduje się plik baza.bash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zanim jednak uruchomię skrypt, muszę wskazać komputerowi że jest to rzeczywiście skrypt napisany w bash-u. Służy do tego tzw. preambuła, którą umieszcza się na początku każdego skryptu. Jest to następująca linia:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!/bin/bash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Zatem cały skrypt wygląda w ten sposób:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#!/bin/bash\n",
+      "start=$(head -n 2 TIC102090493-s2-121s_lc3_fppt.dat | tail -n 1)\n",
+      "start=$(echo $start | cut -d \" \" -f 1)\n",
+      "end=$(tail -n 1 TIC102090493-s2-121s_lc3_fppt.dat)\n",
+      "end=$(echo $end | cut -d \" \" -f 1)\n",
+      "tbase=$(echo $end-$start | bc)\n",
+      "echo $tbase\n"
+     ]
+    }
+   ],
+   "source": [
+    "cat baza.bash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Uruchamia się go poprzez komendę:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27.4044052\n"
+     ]
+    }
+   ],
+   "source": [
+    "bash baza.bash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Skrypt działa i poprawnie wylicza bazę czasową z pliku."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
