--- a/pierwszy_skrypt.ipynb
+++ b/pierwszy_skrypt.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
       "start=$(echo $start | cut -d \" \" -f 1)\n",
       "end=$(tail -n 1 TIC102090493-s2-121s_lc3_fppt.dat)\n",
       "end=$(echo $end | cut -d \" \" -f 1)\n",
-      "tbase=$(echo $end-$start | bc)\n",
+      "tbase=$(echo $end-$start | bc) # wyliczanie bazy czasowej\n",
       "echo $tbase\n"
      ]
     }
@@ -653,15 +653,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Skrypt działa i poprawnie wylicza bazę czasową z pliku."
+    "W takim sposobie uruchamiania skryptu preambuła nie ma znaczenia, ale dzięki niej np. edytor tekstu w którym piszecie skrypt może zacząć kolorować składnię. Skrypt działa i poprawnie wylicza bazę czasową z pliku. Dodatkowo, możemy wpisywać do niego komentarze za pomocą znaku '#'."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
