--- a/2_pierwszy_skrypt.ipynb
+++ b/2_pierwszy_skrypt.ipynb
@@ -11,26 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pisanie skryptów w powłoce bash jest bardzo ważnym elementem przyspieszającym i ułatwiającym pracę z terminalem. Zamiast ręcznie wykonywać serię poleceń, wpisująć każde z osobna, można wpisać je wszystkie do jednego pliku, który będzie potem czytany przez komputer i wykonywane będą zawarte w nim polecenia. Najpierw jednak trzeba poznać podstawowe elementy występujące w bashu."
+    "Pisanie skryptów w powłoce `bash` jest bardzo ważnym elementem przyspieszającym i ułatwiającym pracę z terminalem. Zamiast ręcznie wykonywać serię poleceń, wpisująć każde z osobna, można wpisać je wszystkie do jednego pliku, który będzie potem czytany przez komputer i wykonywane będą zawarte w nim polecenia. Najpierw jednak trzeba poznać podstawowe elementy występujące w bashu."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.1 Operatory przekierowania"
+    "## 2.1 Operatory przekierowania"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Na początek warto zapamiętać, że cokolwiek robimy w terminalu, wynik działania komendy domyślnie będzie wyświetlany na ekranie. W BASH-u isnieją odpowiednie operatory przekierowania, żeby to zmienić. Są to:\n",
+    "Na początek warto zapamiętać, że cokolwiek robimy w terminalu, wynik działania komendy domyślnie będzie wyświetlany na ekranie. W `bash`-u isnieją odpowiednie operatory przekierowania, żeby to zmienić. Są to:\n",
     "\\> >> <\n",
     "\n",
-    "<b>komenda1 > PLIK1</b> : wynik działania operacji komenda1 zostanie wpisany do pliku o nazwie PLIK1 (ponowne zastosowanie, spowoduje napisanie pliku)<br>\n",
-    "<b>komenda2 >> PLIK1</b> : wynik działania operacji komenda2 zostanie dopisany na koniec pliku o nazwie PLIK2 <br>\n",
-    "<b>komenda3 < PLIK3 </b> : zawartość pliku o nazwie PLIK3 zostanie przekierowana do wejścia operacji komenda3.<br>\n",
+    "<b>komenda1 > PLIK1</b> : wynik działania operacji komenda1 zostanie wpisany do pliku o nazwie `PLIK1` (ponowne zastosowanie, spowoduje napisanie pliku)<br>\n",
+    "<b>komenda2 >> PLIK1</b> : wynik działania operacji komenda2 zostanie dopisany na koniec pliku o nazwie `PLIK2` <br>\n",
+    "<b>komenda3 < PLIK3 </b> : zawartość pliku o nazwie `PLIK3` zostanie przekierowana do wejścia operacji komenda3.<br>\n",
     "\n"
    ]
   },
@@ -81,21 +81,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teraz napis 'Astronomia' jest przechowywany w pliku o nazwie astro.dat"
+    "Teraz napis 'Astronomia' jest przechowywany w pliku o nazwie `astro.dat`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Zmienne"
+    "## 2.2 Zmienne"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "W bash-u istnieje również pojęcie zmiennej, do której można przypisać dowolny ciąg znaków, wartość liczbową lub logiczną. Przypisanie wartości odbywa się poprzez operator '='. Składnia: nazwazmiennej=wartość"
+    "W `bash`-u istnieje również pojęcie zmiennej, do której można przypisać dowolny ciąg znaków, wartość liczbową lub logiczną. Przypisanie wartości odbywa się poprzez operator '='. Składnia: nazwazmiennej=wartość"
    ]
   },
   {
@@ -161,14 +161,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Potoki (pipe)"
+    "## 2.3 Potoki (pipe)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "W powłoce bash występuje także pojęcie potoku (w języku angielskim określane jako \"pipe\") i wykorzystuje się je za pomocą symbolu '|'. Ta operacja powoduje przekierowanie wyjścia jednej komendy na wejście drugiej. Zapisujemy to w ten sposób: komenda1 | komenda2. W poniższym przykładzie przekierujemy wyjście z komendy <b>ls</b> do komendy <b>wc</b>."
+    "W powłoce `bash` występuje także pojęcie potoku (w języku angielskim określane jako \"pipe\") i wykorzystuje się je za pomocą symbolu `|`. Ta operacja powoduje przekierowanie wyjścia jednej komendy na wejście drugiej. Zapisujemy to w ten sposób: `komenda1 | komenda2`. W poniższym przykładzie przekierujemy wyjście z komendy <b>`ls`</b> do komendy <b>`wc`</b>."
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wynik działania <b>ls -lrth</b> zwrócił 9 linii. Jak widać, przekierowanie wyniku działania ls zadziałało i komenda wc poprawnie zwraca liczbę wierszy, wyrazów oraz bitów."
+    "Wynik działania `ls -lrth` zwrócił 9 linii. Jak widać, przekierowanie wyniku działania `ls` zadziałało i komenda `wc` poprawnie zwraca liczbę wierszy, wyrazów oraz bitów."
    ]
   },
   {
@@ -231,7 +231,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bardzo wygodnym narzędziem w bash-u jest kalkulator, którym można wyliczać proste wyrażenia. Służy do tego komenda <b>bc</b>. Należy przekierować nasze wyrażenie wyświetlone poprzez komendę echo do kalkulatora bc."
+    "Bardzo wygodnym narzędziem w `bash`-u jest kalkulator, którym można wyliczać proste wyrażenia. Służy do tego komenda <b>`bc`</b>. Należy przekierować nasze wyrażenie wyświetlone poprzez komendę echo do kalkulatora `bc`."
    ]
   },
   {
@@ -297,7 +297,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.4 Skrypt"
+    "## 2.4 Skrypt"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wynik działania komendy również można przypisać do zmiennej. Robi się to następująco:"
+    "<b>Wynik działania komendy również można przypisać do zmiennej.</b> Robi się to następująco:"
    ]
   },
   {
@@ -401,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do uzyskania tylko wartości z czasem, użyjemy komendy <b>cut</b>."
+    "Do uzyskania tylko wartości z czasem, użyjemy komendy <b>`cut`</b>."
    ]
   },
   {
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Wynik działania tej komendy, również przechwycimy do zmiennej, może mieć tę samą nazwę. Nie można użyć pipe'a wcześniej podczas definiowania zmiennej <b>start</b> za pierwszym razem, gdyż sam tekst ma wiele spacji, które zostają okrojone podczas wpisywania do zmiennej. Komendą <b>cut</b> definuijemy jaki ma być separator, który oddziela kolejne kolumny i po wpisaniu do zmiennej jest on właśnie już pojedynczą spacją."
+    "Wynik działania tej komendy, również przechwycimy do zmiennej, może mieć tę samą nazwę. Nie można użyć pipe'a wcześniej podczas definiowania zmiennej <b>start</b> za pierwszym razem, gdyż sam tekst ma wiele spacji, które zostają okrojone podczas wpisywania do zmiennej. Komendą <b>`cut`</b> definuijemy jaki ma być separator, który oddziela kolejne kolumny i po wpisaniu do zmiennej jest on właśnie już pojedynczą spacją."
    ]
   },
   {
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Teraz pozostaje tylko wpisać do zmiennej za pomocą analogicznych komend, ostatnią wartość czasu (ostatnia linia) i odjąć je od siebie za pomocą kalkulatora <b>bc</b>."
+    "Teraz pozostaje tylko wpisać do zmiennej za pomocą analogicznych komend, ostatnią wartość czasu (ostatnia linia) i odjąć je od siebie za pomocą kalkulatora <b>`bc`</b>."
    ]
   },
   {
@@ -543,7 +543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Baza czasowa została wyliczona. Teraz przyszedł czas na to, aby wszystkie komendy potrzebne do jej wyliczenia zebrać razem i wpisać do pliku, który będzie naszym skryptem. W tym przykładzie stworzę plik <b>baza.bash</b>, który będzie przechowywał następujące komendy:"
+    "Baza czasowa została wyliczona. Teraz przyszedł czas na to, aby wszystkie komendy potrzebne do jej wyliczenia zebrać razem i wpisać do pliku, który będzie naszym skryptem. W tym przykładzie stworzę plik `baza.bash`, który będzie przechowywał następujące komendy:"
    ]
   },
   {
@@ -583,7 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Zanim jednak uruchomię skrypt, muszę wskazać komputerowi że jest to rzeczywiście skrypt napisany w bash-u. Służy do tego tzw. preambuła, którą umieszcza się na początku każdego skryptu. Jest to następująca linia:"
+    "Zanim jednak uruchomię skrypt, muszę wskazać komputerowi że jest to rzeczywiście skrypt napisany w `bash`-u. Służy do tego tzw. preambuła, którą umieszcza się na początku każdego skryptu. Jest to następująca linia:"
    ]
   },
   {
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "W takim sposobie uruchamiania skryptu preambuła nie ma znaczenia, ale dzięki niej np. edytor tekstu w którym piszecie skrypt może zacząć kolorować składnię. Skrypt działa i poprawnie wylicza bazę czasową z pliku. Dodatkowo, możemy wpisywać do niego komentarze za pomocą znaku '#'."
+    "W takim sposobie uruchamiania skryptu preambuła nie ma znaczenia, ale dzięki niej np. edytor tekstu w którym piszecie skrypt może zacząć kolorować składnię. Skrypt działa i poprawnie wylicza bazę czasową z pliku. __Dodatkowo, możemy wpisywać do niego komentarze za pomocą znaku `#`.__"
    ]
   }
  ],
