--- a/3_powloka_i_zmienne.ipynb
+++ b/3_powloka_i_zmienne.ipynb
@@ -131,22 +131,24 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "krzkot@krzkot ~# bash                     <= podpowłoka bash\n",
-    "krzkot@krzkot ~# echo $mojazmienna        <= zostanie wyświelona pusta linia, podwpołoka \"nie widzi\" tej zmiennej\n",
+    "```bash\n",
+    "krzkot@krzkot ~ bash                     # podpowłoka bash\n",
+    "krzkot@krzkot ~ echo $mojazmienna        # podwpołoka \"nie widzi\" tej zmiennej\n",
     "\n",
-    "krzkot@krzkot ~# exit                     <= wychodzimy z podpowłowki\n",
+    "krzkot@krzkot ~ exit                     # wychodzimy z podpowłowki\n",
     "exit\n",
-    "krzkot@krzkot ~# echo $mojazmienna        <= główna powłoka wciąż \"widzi\" zmienną\n",
+    "krzkot@krzkot ~ echo $mojazmienna        # główna powłoka wciąż \"widzi\" zmienną\n",
     "lokalna\n",
-    "krzkot@krzkot ~# export mojazmienna       <= eksportujemy zmienną\n",
-    "krzkot@krzkot ~# echo $mojazmienna        <= główna powłoka wciąż \"widzi\" zmienną\n",
+    "krzkot@krzkot ~ export mojazmienna       # eksportujemy zmienną\n",
+    "krzkot@krzkot ~ echo $mojazmienna        # główna powłoka wciąż \"widzi\" zmienną\n",
     "lokalna\n",
-    "krzkot@krzkot ~# bash                     <= znów tworzymy zmienną\n",
-    "krzkot@krzkot ~# echo $mojazmienna        <= podpowłoka również \"widzi\" zmienną\n",
-    "lokalna"
+    "krzkot@krzkot ~ bash                     # znów tworzymy zmienną\n",
+    "krzkot@krzkot ~ echo $mojazmienna        # podpowłoka również \"widzi\" zmienną\n",
+    "lokalna\n",
+    "```"
    ]
   },
   {
