--- a/3_powloka_i_zmienne.ipynb
+++ b/3_powloka_i_zmienne.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"green\"><b>[PORADA]</b> Jest możliwe wykonanie dwóch komend jedna po drugiej w jednej linii. Aby to zrobić, należy je oddzielić znakiem średnika `;`</font>"
+    "__[PORADA]__ Jest możliwe wykonanie dwóch komend jedna po drugiej w jednej linii. Aby to zrobić, należy je oddzielić znakiem średnika `;`"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"green\">__[PORADA]__ Numer procesu może zostać wykorzystany, aby dany proces unicestwić (służy do tego komenda `kill`).</font>"
+    "__[PORADA]__ Numer procesu może zostać wykorzystany, aby dany proces unicestwić (służy do tego komenda `kill`)."
    ]
   },
   {
@@ -450,7 +450,7 @@
     "Jeśli nie podamy indeksu, wyświetlony zostanie pierwszy element (indeks 0). Dodatkowo w przypadku zmiennych tablicowych można również:\n",
     " - zwrócić wszystkie elementy: w miejsce indeksu wpisujemy `*` lub `@`\n",
     " - zwrócić ilość znaków elementu w tablicy: przed nazwą zmiennej należy umieścić znak `#`<br> \n",
-    "<font color=\"green\">__[PORADA]__ w ten sposób można zwrócić ilość elementów w tablicy, wystarczy jako indeks podać `*` lub `@`</font>"
+    "__[PORADA]__ w ten sposób można zwrócić ilość elementów w tablicy, wystarczy jako indeks podać `*` lub `@`"
    ]
   },
   {
