--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -84,10 +84,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color='red'>__[ZADANIE DODATKOWE]__ </font>\n",
+    "## __[ZADANIE DODATKOWE]__\n",
     "### Napisać skrypt tak, aby wypisywał wszystkie działania z dokładnością do dwóch miejsc po przecinku\n",
     "Pamiętajcie o komendzie `man` (manual dla komend) oraz portalu https://stackoverflow.com/ ;)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
