--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -77,7 +77,7 @@
     "Do napisania skryptu wykorzystajcie:\n",
     " - __zmienne tablicowe__\n",
     " - komendy: `head` `tail` `echo` `bc`\n",
-    " - [WSKAZÓWKA]: jeśli napotkopakujcie zmienne cudzysłowem `\"$zmienna\"` podczas wypisywania i przypisywania"
+    " - [WSKAZÓWKA]: jeśli napotkacie zmienne cudzysłowem `\"$zmienna\"` podczas wypisywania i przypisywania"
    ]
   },
   {
