--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -16,23 +16,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.44 / 71.34\n",
-      "11.38 + 11.23\n",
-      "52.93 + 28.94\n",
-      "52.71 * 45.86\n",
-      "44.26 * 23.71\n",
-      "86.5 + 61.25\n",
-      "97.98 + 64.63\n",
-      "1.1 + 70.8\n",
-      "10.96 / 34.67\n",
-      "61.93 / 64.1\n"
+      "724.96 / 1.37\n",
+      "782.65 - 848.9\n",
+      "805.51 + 981.97\n",
+      "296.5 / 132.77\n",
+      "477.15 / 217.23\n",
+      "149.96 - 418.28\n",
+      "707.83 / 241.16\n",
+      "750.53 - 329.8\n",
+      "401.87 / 319.88\n",
+      "717.33 - 189.74\n"
      ]
     }
    ],
@@ -44,30 +44,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ">Jak dokładnie przeanalizujecie plik `equations.dat`, zobaczycie że nie ma w nim działania mnożenia. Znak `*` ma również inne działania w `bash`-u i może powodować niepożądane działanie. Oczywiście można napisać skrypt tak, aby wyliczał wyrażenie z `*` jednak nie będzie można w ten sposób przechwycić go do zmiennej tablicowej. W dalszej części zajęć poznacie sposoby jak spobie poradzić z takim problemem.<br>\n",
+    "\n",
     "Skrypt powinien przyjmować dwa argumenty:\n",
     " - nazwa pliku z działaniami\n",
     " - numer linii z wyrażeniem do obliczenia\n",
     " \n",
-    "Na wyjściu, skrypt powinien wypisywać w terminalu jakie działanie zostało wykonane oraz wynik działania.<br>\n",
+    "Na wyjściu, skrypt powinien wypisywać w terminalu jakie działanie zostało wykonane, jakie liczby zostay użyte oraz wynik działania.<br>\n",
     "__Przykład:__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equation: 10.96 / 34.67\n",
-      "Result: .3161\n"
+      "First number : 401.87\n",
+      "Second number : 319.88\n",
+      "Equation: /\n",
+      "Result: 1.25631486807552832312\n"
      ]
     }
    ],
    "source": [
-    "bash calc_file.bash equations.dat 9"
+    "bash calc.bash equations.dat 9"
    ]
   },
   {
@@ -88,13 +92,6 @@
     "### Napisać skrypt tak, aby wypisywał wszystkie działania z dokładnością do dwóch miejsc po przecinku\n",
     "Pamiętajcie o komendzie `man` (manual dla komend) oraz portalu https://stackoverflow.com/ ;)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
