--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -11,6 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " [UWAGA] Pamiętajcie o komentowaniu skryptu, za pomocą znaku `#` po którym wpisujcie własnymi co dana komenda robi. W ten sposób będę wiedział, ż\n",
     " Zadanie polega na napisaniu skryptu, który będzie obliczał wyrażenia zawarte w pliku `equations.dat`. Struktura tego pliku jest następująca:\n"
    ]
   },
@@ -50,7 +51,7 @@
     " - nazwa pliku z działaniami\n",
     " - numer linii z wyrażeniem do obliczenia\n",
     " \n",
-    "Na wyjściu, skrypt powinien wypisywać w terminalu jakie działanie zostało wykonane, jakie liczby zostay użyte oraz wynik działania.<br>\n",
+    "Na wyjściu, skrypt powinien wypisywać w terminalu jakie działanie zostało wykonane, jakie liczby zostały użyte oraz wynik działania.<br>\n",
     "__Przykład:__"
    ]
   },
