--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -11,7 +11,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " [UWAGA] Pamiętajcie o komentowaniu skryptu, za pomocą znaku `#` po którym wpisujcie własnymi co dana komenda robi. W ten sposób będę wiedział, ż\n",
+    "__[UWAGA]__ *Pamiętajcie o komentowaniu skryptu, za pomocą znaku `#` po którym wpisujcie własnymi co dana komenda robi. W ten sposób będę wiedział, że rozumiecie napisany skrypt.*\n",
+    " \n",
     " Zadanie polega na napisaniu skryptu, który będzie obliczał wyrażenia zawarte w pliku `equations.dat`. Struktura tego pliku jest następująca:\n"
    ]
   },
@@ -79,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do napisania skryptu wykorzystajcie:\n",
+    "Oczywiście skrypt możecie nazwać dowolnie, `calc.bash` to tylko przykład. Do napisania skryptu wykorzystajcie:\n",
     " - __zmienne tablicowe__\n",
     " - komendy: `head` `tail` `echo` `bc`\n",
     " - [WSKAZÓWKA]: jeśli napotkacie zmienne cudzysłowem `\"$zmienna\"` podczas wypisywania i przypisywania"
@@ -93,6 +94,13 @@
     "### Napisać skrypt tak, aby wypisywał wszystkie działania z dokładnością do dwóch miejsc po przecinku\n",
     "Pamiętajcie o komendzie `man` (manual dla komend) oraz portalu https://stackoverflow.com/ ;)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
