--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -83,7 +83,7 @@
     "Oczywiście skrypt możecie nazwać dowolnie, `calc.bash` to tylko przykład. Do napisania skryptu wykorzystajcie:\n",
     " - __zmienne tablicowe__\n",
     " - komendy: `head` `tail` `echo` `bc`\n",
-    " - [WSKAZÓWKA]: jeśli napotkacie zmienne cudzysłowem `\"$zmienna\"` podczas wypisywania i przypisywania"
+    " - [WSKAZÓWKA]: jeśli napotkacie problemy, opakujcie zmienne cudzysłowem `\"$zmienna\"` podczas wypisywania i przypisywania"
    ]
   },
   {
