--- a/exercises/zad_1/zad_1.ipynb
+++ b/exercises/zad_1/zad_1.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### __[UWAGA]__ Pamiętajcie o komentowaniu skryptu, za pomocą znaku `#` po którym wpisujcie własnymi co dana komenda robi. W ten sposób będę wiedział, że rozumiecie napisany skrypt.\n",
+    "### __[UWAGA]__ Pamiętajcie o komentowaniu skryptu, za pomocą znaku `#` po którym wpisujcie własnymi słowami co dana komenda robi. W ten sposób będę wiedział, że rozumiecie napisany skrypt.\n",
     " \n",
     " Zadanie polega na napisaniu skryptu, który będzie obliczał wyrażenia zawarte w pliku `equations.dat`. Struktura tego pliku jest następująca:\n"
    ]
