czwarty notebook - mała poprawka

--- a/4_duze_pliki_tekstowe.ipynb
+++ b/4_duze_pliki_tekstowe.ipynb
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Komenda `sed` jest bardzo użyteczną komendą dzięki, której można w rózny sposób manipulować plikiem. Tak naprawdę jest to dość zaawansowany program, który sam w sobie może być językiem programowania. Służy on do przetwarzania tekstów.\n",
+    "Komenda `sed` jest bardzo użyteczną komendą dzięki, której można w rózny sposób manipulować plikiem. Tak naprawdę jest to dość zaawansowany program, który sam w sobie może być językiem programowania. Służy on do przetwarzania tekstów. Operacje zazwyczaj dobrze jest \"opakować\" apostrofami 'operacje' - wtedy rozpoznawane są w całości jako ciąg znaków. Warto użyć cudzysłowia w przypadku łączenia ze zmiennymi - będą miały podstawioną wartość.\n",
     "Uruchomienie:\n",
     "```bash\n",
     "sed [opcje] 'operacje' plik\n",
