--- a/5_awk-part1.ipynb
+++ b/5_awk-part1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.1 Struktura `awk` i użycie postawowych komend."
+    "## 5.1 Struktura `awk` i użycie postawowych komend"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5.2 Wbudowane zmienne i opreacje matematyczne."
+    "## 5.2 Wbudowane zmienne i operacje matematyczne"
    ]
   },
   {
