--- a/6_awk-part2.ipynb
+++ b/6_awk-part2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Język interpertowany AWK - część 2"
+    "# 6. Język interpretowany AWK - część 2"
    ]
   },
   {
