--- a/5_awk-part1.ipynb
+++ b/5_awk-part1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Język interpertowany AWK - część 1"
+    "# 5. Język interpretowany AWK - część 1"
    ]
   },
   {
