--- a/6_awk-part2.ipynb
+++ b/6_awk-part2.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -403,6 +403,76 @@
     "printf(\"%30s %-20s\\n\", \"Deklinacja: \", gwiazda[\"DEC\"]);\n",
     "}'"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6.5 Część ciągu znaków `substr`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "W `awk` możliwe jest również wypisanie części ciągu znaków, podobnie jak wpisywanie części zmiennej znakowej w `bash`-u (`${zmienna:offset:lenght}`). Służy do tego funkcja w `awk` o nazwie `substr`. Składnia jest następująca:\n",
+    "```bash\n",
+    "awk '{print substr(zmienna,offset,lenght)}'\n",
+    "```\n",
+    "Oznaczenia są takie same wcześniej.\n",
+    "Poniżej przykłady:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".167\n",
+      ".169\n",
+      ".170\n"
+     ]
+    }
+   ],
+   "source": [
+    "awk -F ',' 'NR>8529{print substr($1,5,4)}' TIC12974182-comma.dat   # Wypisanie 4 znaków zaczynając od 5 miejsca dla pierwszego pola (dla 3 ostatnich linii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Część dziesiętna (3 cyfry) z czasu: .167\n",
+      "Część dziesiętna (4 cyfry) z błędu strumienia: .1972\n",
+      "\n",
+      "Część dziesiętna (3 cyfry) z czasu: .169\n",
+      "Część dziesiętna (4 cyfry) z błędu strumienia: .1970\n",
+      "\n",
+      "Część dziesiętna (3 cyfry) z czasu: .170\n",
+      "Część dziesiętna (4 cyfry) z błędu strumienia: .1973\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "awk -F ',' 'NR>8529{print \"Część dziesiętna (3 cyfry) z czasu: \"substr($1,5,4)\"\\nCzęść dziesiętna (4 cyfry) z błędu strumienia: \" substr($3,2,5)\"\\n\"}' TIC12974182-comma.dat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> W powyższym przykładzie, gdy struktura pliku jest ustalona, można wypisać różne informacje. <br>W tym przypadku wypisane zostały (dla 3 ostatnich linii) części dzisiętne dla __pierwszej__ (`$1`) i __trzeciej__ (`$3`) kolumy z odpowiednio 3 i 4 cyframi po przecinku."
+   ]
   }
  ],
  "metadata": {
@@ -419,5 +489,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
