--- a/exercises/zad_3/zad_3.ipynb
+++ b/exercises/zad_3/zad_3.ipynb
@@ -57,9 +57,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "```text\n",
     "    HD,  RAd  , DECd  ,  Ptm  ,  Ptg  , SpT\n",
     "     1,  0.0  , +67.28,  7.700,  8.700, K0 \n",
     "     2,  0.0  , +57.22,  8.600,  9.000, F5 \n",
@@ -69,7 +70,8 @@
     "     6,  0.0  , -1.07 ,  6.280,  7.280, K0 \n",
     "     7,  0.0  , -2.42 ,  9.000, 10.000, K0 \n",
     "     8,  0.0  , -4.60 , 10.000, 10.600, G0 \n",
-    "     9,  0.0  , -21.18,  9.200, 10.800, K2"
+    "     9,  0.0  , -21.18,  9.200, 10.800, K2\n",
+    "```"
    ]
   },
   {
