--- a/exercises/zad_3/zad_3.ipynb
+++ b/exercises/zad_3/zad_3.ipynb
@@ -53,14 +53,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do wykonania zadania należy zapoznać się ze strukturą pliku opisaną w pliku `ReadMe`. Na jego podstawie należy wypisać z pliku `catalog.dat` __sześć__ wartości: `numer HD`, `rektascensja`, `deklinacja`, `jasność wizualna`, `jasność`, `typ widmowy` do __pliku__ o wybranej nazwie (to oczywiście w skrypcie). Rektascensja i deklinacja powinny być w formacie dziesiętnym. Wypisane dane powinny być po przecinkach wraz z nagłówkiem. Taki format pliku nazywany jest __CSV__ (Comma Separated Values). Struktura powinna wyglądać nastepująco:"
+    "Do wykonania zadania należy zapoznać się ze strukturą pliku opisaną w pliku `ReadMe`. Na jego podstawie należy wypisać z pliku `catalog.dat` __sześć__ wartości: `numer HD`, `rektascensja`, `deklinacja`, `jasność wizualna`, `jasność`, `typ widmowy` do __pliku__ o wybranej nazwie (to oczywiście w skrypcie). Rektascensja i deklinacja powinny być w formacie dziesiętnym. Wypisane dane powinny być po przecinkach wraz z nagłówkiem. Taki format pliku nazywany jest __CSV__ (Comma Separated Values). Struktura powinna wyglądać nastepująco (10 pierwszych linii):"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```text\n",
     "    HD,  RAd  , DECd  ,  Ptm  ,  Ptg  , SpT\n",
     "     1,  0.0  , +67.28,  7.700,  8.700, K0 \n",
     "     2,  0.0  , +57.22,  8.600,  9.000, F5 \n",
@@ -70,8 +69,8 @@
     "     6,  0.0  , -1.07 ,  6.280,  7.280, K0 \n",
     "     7,  0.0  , -2.42 ,  9.000, 10.000, K0 \n",
     "     8,  0.0  , -4.60 , 10.000, 10.600, G0 \n",
-    "     9,  0.0  , -21.18,  9.200, 10.800, K2\n",
-    "```"
+    "     9,  0.0  , -21.18,  9.200, 10.800, K2 \n",
+    "    ..."
    ]
   },
   {
