--- a/exercises/zad_3/zad_3.ipynb
+++ b/exercises/zad_3/zad_3.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### __[WSKAZÓWKA]__  Do rysowania histogramu użyjcie `awk` z funkcją `printf`, gdzie format `%liczba` będzie zawierał zmienną.|"
+    "### __[WSKAZÓWKA]__  Do rysowania histogramu użyjcie `awk` z funkcją `printf`, gdzie format `%liczba` będzie zawierał zmienną."
    ]
   },
   {
