--- a/1_komendy.ipynb
+++ b/1_komendy.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,150 +59,12 @@
       "\n",
       "       --copy-contents\n",
       "              copy contents of special files when recursive\n",
-      "\n",
-      "       -d     same as --no-dereference --preserve=links\n",
-      "\n",
-      "       -f, --force\n",
-      "              if an existing destination file cannot be opened, remove it  and\n",
-      "              try  again  (this  option  is ignored when the -n option is also\n",
-      "              used)\n",
-      "\n",
-      "       -i, --interactive\n",
-      "              prompt before overwrite (overrides a previous -n option)\n",
-      "\n",
-      "       -H     follow command-line symbolic links in SOURCE\n",
-      "\n",
-      "       -l, --link\n",
-      "              hard link files instead of copying\n",
-      "\n",
-      "       -L, --dereference\n",
-      "              always follow symbolic links in SOURCE\n",
-      "\n",
-      "       -n, --no-clobber\n",
-      "              do not overwrite an  existing  file  (overrides  a  previous  -i\n",
-      "              option)\n",
-      "\n",
-      "       -P, --no-dereference\n",
-      "              never follow symbolic links in SOURCE\n",
-      "\n",
-      "       -p     same as --preserve=mode,ownership,timestamps\n",
-      "\n",
-      "       --preserve[=ATTR_LIST]\n",
-      "              preserve the specified attributes (default: mode,ownership,time‐\n",
-      "              stamps), if  possible  additional  attributes:  context,  links,\n",
-      "              xattr, all\n",
-      "\n",
-      "       --no-preserve=ATTR_LIST\n",
-      "              don't preserve the specified attributes\n",
-      "\n",
-      "       --parents\n",
-      "              use full source file name under DIRECTORY\n",
-      "\n",
-      "       -R, -r, --recursive\n",
-      "              copy directories recursively\n",
-      "\n",
-      "       --reflink[=WHEN]\n",
-      "              control clone/CoW copies. See below\n",
-      "\n",
-      "       --remove-destination\n",
-      "              remove  each existing destination file before attempting to open\n",
-      "              it (contrast with --force)\n",
-      "\n",
-      "       --sparse=WHEN\n",
-      "              control creation of sparse files. See below\n",
-      "\n",
-      "       --strip-trailing-slashes\n",
-      "              remove any trailing slashes from each SOURCE argument\n",
-      "\n",
-      "       -s, --symbolic-link\n",
-      "              make symbolic links instead of copying\n",
-      "\n",
-      "       -S, --suffix=SUFFIX\n",
-      "              override the usual backup suffix\n",
-      "\n",
-      "       -t, --target-directory=DIRECTORY\n",
-      "              copy all SOURCE arguments into DIRECTORY\n",
-      "\n",
-      "       -T, --no-target-directory\n",
-      "              treat DEST as a normal file\n",
-      "\n",
-      "       -u, --update\n",
-      "              copy only when the SOURCE file is  newer  than  the  destination\n",
-      "              file or when the destination file is missing\n",
-      "\n",
-      "       -v, --verbose\n",
-      "              explain what is being done\n",
-      "\n",
-      "       -x, --one-file-system\n",
-      "              stay on this file system\n",
-      "\n",
-      "       -Z     set SELinux security context of destination file to default type\n",
-      "\n",
-      "       --context[=CTX]\n",
-      "              like  -Z,  or  if CTX is specified then set the SELinux or SMACK\n",
-      "              security context to CTX\n",
-      "\n",
-      "       --help display this help and exit\n",
-      "\n",
-      "       --version\n",
-      "              output version information and exit\n",
-      "\n",
-      "       By default, sparse SOURCE files are detected by a crude  heuristic  and\n",
-      "       the corresponding DEST file is made sparse as well.  That is the behav‐\n",
-      "       ior selected by --sparse=auto.  Specify  --sparse=always  to  create  a\n",
-      "       sparse  DEST  file  whenever  the  SOURCE  file  contains a long enough\n",
-      "       sequence of zero bytes.  Use  --sparse=never  to  inhibit  creation  of\n",
-      "       sparse files.\n",
-      "\n",
-      "       When --reflink[=always] is specified, perform a lightweight copy, where\n",
-      "       the data blocks are copied only when modified.  If this is not possible\n",
-      "       the copy fails, or if --reflink=auto is specified, fall back to a stan‐\n",
-      "       dard copy.\n",
-      "\n",
-      "       The  backup  suffix  is  '~',  unless  set  with   --suffix   or   SIM‐\n",
-      "       PLE_BACKUP_SUFFIX.   The version control method may be selected via the\n",
-      "       --backup option or through the  VERSION_CONTROL  environment  variable.\n",
-      "       Here are the values:\n",
-      "\n",
-      "       none, off\n",
-      "              never make backups (even if --backup is given)\n",
-      "\n",
-      "       numbered, t\n",
-      "              make numbered backups\n",
-      "\n",
-      "       existing, nil\n",
-      "              numbered if numbered backups exist, simple otherwise\n",
-      "\n",
-      "       simple, never\n",
-      "              always make simple backups\n",
-      "\n",
-      "       As  a  special  case,  cp  makes  a backup of SOURCE when the force and\n",
-      "       backup options are given and SOURCE and DEST are the same name  for  an\n",
-      "       existing, regular file.\n",
-      "\n",
-      "AUTHOR\n",
-      "       Written by Torbjorn Granlund, David MacKenzie, and Jim Meyering.\n",
-      "\n",
-      "REPORTING BUGS\n",
-      "       GNU coreutils online help: <http://www.gnu.org/software/coreutils/>\n",
-      "       Report cp translation bugs to <http://translationproject.org/team/>\n",
-      "\n",
-      "COPYRIGHT\n",
-      "       Copyright  ©  2017  Free Software Foundation, Inc.  License GPLv3+: GNU\n",
-      "       GPL version 3 or later <http://gnu.org/licenses/gpl.html>.\n",
-      "       This is free software: you are free  to  change  and  redistribute  it.\n",
-      "       There is NO WARRANTY, to the extent permitted by law.\n",
-      "\n",
-      "SEE ALSO\n",
-      "       Full documentation at: <http://www.gnu.org/software/coreutils/cp>\n",
-      "       or available locally via: info '(coreutils) cp invocation'\n",
-      "\n",
-      "GNU coreutils 8.28               January 2018                            CP(1)\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "man cp"
+    "man cp | head -n 30    # komendą `head -n 30` wyświetlam 30 pierwszych linii manuala "
    ]
   },
   {
@@ -214,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -250,132 +112,12 @@
       "  -f                         bez sortowania, włączenie -aU, wyłączenie -lst\n",
       "  -F, --classify             dopisanie znaków wskazujących typ każdego\n",
       "                               elementu (jednego z */=>@|)\n",
-      "      --file-type            podobnie, ale oprócz „*”\n",
-      "      --format=SŁOWO         across (poziomo), odpowiada opcji -x, commas\n",
-      "                               (oddzielone przecinkami) -m, horizontal\n",
-      "                               (poziomo) -x, long (długi, z dodatkowymi\n",
-      "                               informacjami) -l, single-column (w jednej\n",
-      "                               kolumnie) -1, verbose (długi, z dodatkowymi\n",
-      "                               informacjami) -l, vertical (pionowy, w\n",
-      "                               kolumnach) -C\n",
-      "      --full-time            jak -l --time-style=full-iso\n",
-      "  -g                         jak -l, ale nie pokazuje właściciela\n",
-      "      --group-directories-first\n",
-      "                             wypisanie wszystkich katalogów przed plikami;\n",
-      "                               ta opcja może być uzupełniona opcją --sort,\n",
-      "                               ale wyłącza ją użycie opcji --sort=none (-U)\n",
-      "  -G, --no-group             bez pokazania informacji o grupach\n",
-      "  -h, --human-readable       z opcją -l lub -s podaje rozmiary w formacie\n",
-      "                               czytelnym dla ludzi (np. 1K 234M 2G)\n",
-      "      --si                   podobnie, ale z użyciem potęg 1000, nie 1024\n",
-      "  -H, --dereference-command-line\n",
-      "                             rozwiązywanie dowiązań symbolicznych podanych\n",
-      "                               jako argumenty\n",
-      "      --dereference-command-line-symlink-to-dir\n",
-      "                             rozwiązywanie dowiązań symbolicznych podanych\n",
-      "                               jako argumenty jeżeli wskazują na katalogi\n",
-      "      --hide=WZÓR            bez wypisywania nazw pasujących do WZORU\n",
-      "                               (wyłączane przez -a albo -A)\n",
-      "      --hyperlink[=WHEN]     hyperlink file names; WHEN can be 'always'\n",
-      "                               (default if omitted), 'auto', or 'never'\n",
-      "      --indicator-style=SŁOWO  dodanie wskaźników typów plików w stylu SŁOWO:\n",
-      "                                none (domyślnie), slash (-p), file-type\n",
-      "                                (--file-type), classify (-F)\n",
-      "  -i, --inode                pokazywanie numeru i-węzła każdego pliku\n",
-      "  -I, --ignore=WZÓR          bez pokazywania plików pasujących do shellowego WZORU\n",
-      "  -k, --kibibytes            zużycie dysku w blokach o rozmiarze 1024 bajtów\n",
-      "  -l                         użycie długiego formatu wyjściowego\n",
-      "  -L, --dereference          pokazanie informacji o pliku wskazywanym przez\n",
-      "                               dowiązanie symboliczne zamiast informacji o\n",
-      "                               samym dowiązaniu\n",
-      "  -m                         pisanie do pełnej szerokości, oddzielanie przecinkami\n",
-      "  -n, --numeric-uid-gid      jak -l, ale pokazanie UID i GID liczbowo\n",
-      "  -N, --literal              wypisanie surowej nazwy bez bez specjalnego\n",
-      "                               traktowania np. znaków sterujących\n",
-      "  -o                         jak -l, ale bez informacji o grupie\n",
-      "  -p, --indicator-style=slash  dodanie / do nazw katalogów\n",
-      "  -q, --hide-control-chars   pisanie ? zamiast znaków sterujących\n",
-      "      --show-control-chars   pokazanie znaków niedrukowalnych (domyślnie, chyba\n",
-      "                             że program nazywa się „ls” i pisze na terminalu)\n",
-      "  -Q, --quote-name           ujęcie nazw w cudzysłowy\n",
-      "      --quoting-style=SŁOWO  zabezpieczenie znaków specjalnych w stylu SŁOWO:\n",
-      "                               literal, locale, shell, shell-always,\n",
-      "                               shell-escape, shell-escape-always, c, escape\n",
-      "  -r, --reverse              odwrotny porządek sortowania\n",
-      "  -R, --recursive            rekursywne listowanie katalogów\n",
-      "  -s, --size                 wypisanie liczby bloków zajętych przez każdy plik\n",
-      "  -S                         sortowanie według rozmiaru, największe najpierw\n",
-      "      --sort=SŁOWO           sortowanie wg SŁOWA zamiast wg nazw: none (-U,\n",
-      "                               wcale), size (-S, rozmiaru), time (-t, czasu),\n",
-      "                               version (-v, wersji), extension (-X,\n",
-      "                               rozszerzenia)\n",
-      "      --time=SŁOWO           z opcją -l - zamiast domyślnego czasu modyfikacji\n",
-      "                               pokazanie czasu określonego SŁOWEM domyślnie:\n",
-      "                               czas odczytu - atime, access, use (-u),\n",
-      "                               czas zmiany informacji o pliku - ctime,\n",
-      "                               status (-c); także użycie podanego czasu do\n",
-      "                               sortowania gdy podano --sort=time (najnowsze\n",
-      "                               najpierw)\n",
-      "      --time-style=STYL      z opcją -l: pokazanie czasu przy użyciu STYLU:\n",
-      "                               full-iso, long-iso, iso, locale albo +FORMAT;\n",
-      "                               FORMAT jest interpretowany jak w „date”; jeżeli\n",
-      "                               FORMAT to FORMAT1<znak nowej linii>FORMAT2,\n",
-      "                               FORMAT1 dotyczy dawniejszych plików, FORMAT2\n",
-      "                               nowszych; jeżeli STYL zaczyna się od „posix-”,\n",
-      "                               STYL jest używany tylko dla locale nie POSIX\n",
-      "  -t                         sortowanie wg czasu modyfikacji, najnowsze\n",
-      "                                na początku\n",
-      "  -T, --tabsize=KOLUMNA      TAB co tyle KOLUMN zamiast co 8\n",
-      "  -u                         z -lt: sortowanie wg czasu i wypisanie czasu\n",
-      "                               ostatniego dostępu; z -l: wypisanie czasu\n",
-      "                               dostępu i sortowanie wg nazw; w przeciwnym\n",
-      "                               przypadku: sortowanie wg czasu dostępu,\n",
-      "                               najnowsze najpierw\n",
-      "  -U                         bez sortowania, wypisanie kolejności jak w\n",
-      "                               katalogu\n",
-      "  -v                         sortowanie wg liczb (numerów wersji) zawartych\n",
-      "                               w nazwach plików\n",
-      "  -w, --width=KOLUMNY        przyjęcie takiej szerokości ekranu zamiast\n",
-      "                             wartości bieżącej; 0 oznacza brak ograniczenia\n",
-      "  -x                         wypisanie nazw w kolejnych liniach, nie kolumnach\n",
-      "  -X                         sortowanie alfabetyczne wg rozszerzeń\n",
-      "  -Z, --context              wypisanie kontekstu bezpieczeństwa pliku/plików\n",
-      "  -1                         wypisywanie po jednym pliku w linii; używając\n",
-      "                               opcji -q albo -b można uniknąć dosłownego\n",
-      "                               wypisania znaku nowej linii w nazwie\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      --help     wyświetlenie tego opisu i zakończenie\n",
-      "      --version  wyświetlenie informacji o wersji i zakończenie\n",
-      "\n",
-      "Argument ROZMIAR jest liczbą całkowitą z dodaną opcjonalnie jednostką\n",
-      "(przykład: 10K to 10*1024). Jednostki to K, M, G, T, P, E, Z, Y (potęgi 1024)\n",
-      "albo KB, MB, ... (potęgi 1000).\n",
-      "\n",
-      "Używanie kolorów do wyróżnienia typów plików jest wyłączone domyślnie\n",
-      "albo jeżeli użyta jest opcja --color=never. Przy --color-auto polecenie\n",
-      "ls wysyła kody kolorów tylko jeżeli jest połączone z terminalem. Zmienna\n",
-      "środowiskowa LS_COLORS może zmienić te ustawienia. Można ją ustawić\n",
-      "przy pomocy polecenia dircolors.\n",
-      "\n",
-      "Kod wyjściowy:\n",
-      " 0  jeżeli bez błędów,\n",
-      " 1  przy drobnych problemach (np. brak dostępu do podkatalogu),\n",
-      " 2  przy poważnych problemach (np. brak dostępu do podanego argumentu).\n",
-      "\n",
-      "Pomoc do GNU coreutils w sieci: http://www.gnu.org/software/coreutils/\n",
-      "O błędach tłumaczenia ls poinformuj przez http://translationproject.org/team/\n",
-      "Pełna dokumentacja w: http://www.gnu.org/software/coreutils/ls\n",
-      "albo dostępna lokalnie przez: info '(coreutils) ls invocation'\n"
+      "      --file-type            podobnie, ale oprócz „*”\n"
      ]
     }
    ],
    "source": [
-    "ls --help"
+    "ls --help | head -n 30"
    ]
   },
   {
@@ -918,5 +660,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
