--- a/exercises/zad_3/zad_3.ipynb
+++ b/exercises/zad_3/zad_3.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "![SegmentLocal](zad3.gif \"segment\")\n",
     "\n",
-    "Zostały stworzone pliki: `hd.dat` - zawierający katalog z 6 kolumnami oraz `circumstellar_51.1.dat` - zawierający gwiazdy niezachodzące na szerokości geograficznej $\\phi$= 51.1$^{\\circ}$ N"
+    "Zostały stworzone pliki: `hd.dat` - zawierający katalog z 6 kolumnami oraz `circumpolar_51.1.dat` - zawierający gwiazdy niezachodzące na szerokości geograficznej $\\phi$= 51.1$^{\\circ}$ N"
    ]
   },
   {
